# mcstools

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yml  pr_test.yml  publish.yml
mcs-tools/: conftest.py  mcsfile.py  reader.py  test_mcsfile.py
mcs-tools/util/: geom.py  mars_time.py  test_util.py
mcstools/: __init__.py  conftest.py  data_path_handler.py  detector_positions.py  dev_spectral_response.ipynb  l1b_pds.ipynb  loader.py  mcsfile.py  radiance_profile.py  reader.py  spectral_response.py  test_data_path_handler.py  test_radiance_profile.py  test_reader.py
mcstools/plotting/: l1b_panel.py  l2_panel.py
mcstools/preprocess/: __init__.py  data_pipeline.py  l1b.py  l1b_limb.py  onplanet_finder.py
mcstools/preprocess/l2/: config_example.yaml  dev.ipynb  filter_and_bin.py  find_profiles.py  get_binned_profile_ids.py
mcstools/process_binned_data/: dev.ipynb
mcstools/spectral_response_data/: README.md  spectral_response_data_A1-A5.txt  spectral_response_data_A6.txt  spectral_response_data_B1.txt  spectral_response_data_B2.txt  spectral_response_data_B3.txt
mcstools/util/: conftest.py  geom.py  io.py  log.py  mars_time.py  test_util.py  time.py
test/: config_test.yaml  top.L1B  top.L2
