[project]
name = "mcstools"
version = "0.1.0"
description = "Read, load, and process Mars Climate Sounder data"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cmcrameri>=1.9",
    "coloredlogs>=15.0.1",
    "hvplot>=0.11.3",
    "mars-datetime>=1.0.2",
    "numpy>=2.2.6",
    "pandas>=2.3.0",
    "panel>=1.7.1",
    "python-dotenv>=1.1.0",
    "requests>=2.32.4",
    "scipy>=1.15.3",
    "xarray>=2025.6.1",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "flake8>=7.3.0",
    "isort>=6.0.1",
    "pytest>=8.4.1",
]

[tool.black]
# keep in sync with tox.ini
line-length = 88
target-version = [ "py39" ]
color = true
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | \.ipynb_checkpoints
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[tool.isort]
profile = "black"
directory = ["mcstools"]
skip_glob = "mcstools/.ipynb_checkpoints/*"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mcstools"]
