[metadata]
name = mcstools
version = 0.0.1
author = Marek Slipski
author_email = marek.slipski@gmail.com
description = "Read, load, and process Mars Climate Sounder data"
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
url = https://github.com/Cloudspotting-on-Mars/mcstools
project_urls =
    Bug Tracker = https://github.com/Cloudspotting-on-Mars/mcstools/issues
    repository = https://github.com/Cloudspotting-on-Mars/mcstools
license = CC0 1.0 Universal
keywords = mars, mcs
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Creative Commons License
    Operating System :: OS Independent

[options]
package_dir =
    = mcstools
python_requires = >=3.6
install_requires =
    pandas == 1.4.3
    dask == 2022.6.1
    marstime == 0.5.6
    numpy==1.23.0
    scipy==1.8.1
    coloredlogs==15.0.1
    requests
    xarray
    click

[options.packages.find]
where = mcstools

[options.extras_require]
notebook = 
    jupyter>=1.0.0
    matplotlib
dev = 
    black==22.3.0
    flake8==4.0.1
    isort==5.10.1
    pytest==7.1.2