[metadata]
name = mcstools
version = 0.0.4
author = Marek Slipski
author_email = marek.slipski@gmail.com
description = "Read, load, and process Mars Climate Sounder data"
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
url = https://github.com/Cloudspotting-on-Mars/mcstools
project_urls =
    Bug Tracker = https://github.com/Cloudspotting-on-Mars/mcstools/issues
    repository = https://github.com/Cloudspotting-on-Mars/mcstools
license = CC0 1.0 Universal
keywords = mars, mcs
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Common Public License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.10
install_requires =
    pandas == 1.4.3
    dask == 2022.6.1
    numpy==1.23.0
    scipy==1.11.4
    coloredlogs==15.0.1
    cmcrameri==1.5
    click==8.1.3
    requests==2.28.1
    xarray==2022.12.0
    hvplot==0.8.3
    panel==0.14.4
    mars_time @ git+https://github.com/kconnour/mars_time.git
    python-dotenv==1.0.0

[options.extras_require]
notebook = 
    jupyter>=1.0.0
    matplotlib
dev = 
    black==22.3.0
    flake8==4.0.1
    isort==5.10.1
    pytest==7.1.2